Add Button text Only

--- a/src/components/Buttons/index.module.scss
+++ b/src/components/Buttons/index.module.scss
@@ -41,6 +41,26 @@
   }
 }
 
+.text {
+  background-color: white;
+  color: $color-primary;
+  padding: $spacing-unit $spacing-unit * 2;
+  border: none;
+  border-radius: $border-radius;
+  cursor: pointer;
+  font-weight: 500;
+  height: 40px;
+  max-height: 40px;
+  transition: box-shadow 0.3s ease, background-color 0.3s ease;
+  &:hover {
+    box-shadow: rgba(0, 0, 0, 0.24) 0rem 0.3rem 0.8rem;
+  }
+  &:active {
+    transform: scale(0.98);
+    box-shadow: rgba(0, 0, 0, 0.2) 0rem 0.1rem 0.3rem inset;
+  }
+}
+
 .content {
   display: inline-flex;
   align-items: center;
