Add disabled color and button

--- a/src/components/Buttons/index.module.scss
+++ b/src/components/Buttons/index.module.scss
@@ -61,6 +61,11 @@
   }
 }
 
+.disabled {
+  pointer-events: none;
+  background-color: $color-grey;
+}
+
 .content {
   display: inline-flex;
   align-items: center;
