--- a/src/components/Buttons/index.module.scss
+++ b/src/components/Buttons/index.module.scss
@@ -34,6 +34,7 @@
   transition: box-shadow 0.3s ease, background-color 0.3s ease;
   &:hover {
     box-shadow: rgba(0, 0, 0, 0.24) 0rem 0.3rem 0.8rem;
+    color: white;
   }
   &:active {
     transform: scale(0.98);
@@ -54,6 +55,7 @@
   transition: box-shadow 0.3s ease, background-color 0.3s ease;
   &:hover {
     box-shadow: rgba(0, 0, 0, 0.24) 0rem 0.3rem 0.8rem;
+    color: white;
   }
   &:active {
     transform: scale(0.98);
